<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.newland.activity.MainActivity">

    <ScrollView
        android:id="@+id/right_layout"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/receive_encoding" />

            <RadioGroup
                android:id="@+id/encoding_rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/hex_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hex" />

                <RadioButton
                    android:id="@+id/utf8_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/utf8" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/divider" />

            <CheckBox
                android:id="@+id/show_time_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_time" />

            <CheckBox
                android:id="@+id/show_color_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_flag" />

            <CheckBox
                android:id="@+id/send_back_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_back" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/scan_timeout" />

            <Spinner
                android:id="@+id/scan_timeout_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/scan_timeout_arr" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/divider" />

            <CheckBox
                android:id="@+id/auto_reconnect_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_reconnect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/reconnect_interval" />

            <Spinner
                android:id="@+id/reconnect_interval_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/reconnect_interval_arr" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/reconnect_max_time" />

            <Spinner
                android:id="@+id/reconnect_max_time_spanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/reconnect_max_time_arr" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/divider" />

            <Button
                android:id="@+id/uuid_setting_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_uuid" />

            <Button
                android:id="@+id/uuid_select_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_uuid" />

            <CheckBox
                android:id="@+id/never_select_uuid_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/never_select_uuid_when_connect" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/divider" />

            <Button
                android:id="@+id/send_setting_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_setting" />

            <Button
                android:id="@+id/send_history_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_history" />


            <Button
                android:id="@+id/about_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/center_vertical_divider"
        android:layout_width="@dimen/divider_size"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/right_layout"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/left_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/center_vertical_divider">

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/scan_device_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scan_device" />

            <Button
                android:id="@+id/stop_scan_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_scan" />

            <Button
                android:id="@+id/delete_device_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_device" />

            <Button
                android:id="@+id/clear_text_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_layout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rx_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rx" />

                <TextView
                    android:id="@+id/tx_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/divider" />

            <ScrollView
                android:id="@+id/msg_sv"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/msg_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>