<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dialog_horizontal_padding"
    android:paddingRight="@dimen/dialog_horizontal_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_uuid" />

    <EditText
        android:id="@+id/service_uuid_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uuid_format"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_uuid" />

    <EditText
        android:id="@+id/read_uuid_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uuid_format"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_uuid" />

    <EditText
        android:id="@+id/write_uuid_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uuid_format"
        android:singleLine="true" />

</LinearLayout>