<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dialog_horizontal_padding"
    android:paddingRight="@dimen/dialog_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dialog_item_characteristic_width"
            android:layout_height="wrap_content"
            android:text="@string/characteristic" />

        <TextView
            android:layout_width="@dimen/dialog_item_characteristic_radio_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_horizontal_padding"
            android:text="@string/read_characteristic" />

        <TextView
            android:layout_width="@dimen/dialog_item_characteristic_radio_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_horizontal_padding"
            android:text="@string/write_characteristic" />
    </LinearLayout>

    <ListView
        android:id="@+id/characteristic_lv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"/>

</LinearLayout>